# wayfire

./: meson.build
metadata/: fast-switcher.xml
plugins/: meson.build
plugins/animate/: meson.build
plugins/blur/: meson.build
plugins/common/wayfire/plugins/common/: workspace-wall.hpp
plugins/cube/: meson.build
plugins/decor/: meson.build
plugins/grid/: meson.build
plugins/ipc/: meson.build
plugins/pch/: pch.h
plugins/scale/: meson.build
plugins/single_plugins/: fast-switcher.cpp  meson.build
plugins/tile/: meson.build
plugins/vswitch/: meson.build
plugins/window-rules/: meson.build
plugins/wm-actions/: meson.build  wm-actions.cpp
plugins/wobbly/: meson.build
src/: meson.build
src/api/wayfire/: opengl.hpp  plugin.hpp  render-manager.hpp  scene-render.hpp
src/core/: idle.cpp  opengl.cpp  output-layout.cpp  scene.cpp
src/output/: render-manager.cpp  workspace-stream.cpp
src/view/: view-impl.cpp  view-impl.hpp  wlr-surface-node.cpp
